--- a/src/scss/bootstrap/_utilities.scss
+++ b/src/scss/bootstrap/_utilities.scss
@@ -215,6 +215,7 @@ $utilities: map-merge(
       responsive: true,
       class: mw,
       values: (
+        75: 75%,
         100: 100%,
         '632px': 39.5rem,
         '520px': 32.5rem,
