--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -44,5 +44,7 @@
 @import "./components/br";
 @import "./components/view-content";
 @import "./components/banner";
+@import "./components/counter";
 @import "./components/choices";
+@import "./components/swipers";
 @import "./components/footer";
