Add SCSS files for input groups, list groups, and reboot styles
- Implemented `_input-group.scss` to define styles for input groups, including base styles, sizing, and validation states.
- Created `_list-group.scss` to establish base styles for list groups, including individual list items, interactive states, and contextual variants.
- Added `_reboot.scss` for normalization of HTML elements, ensuring consistent styling across browsers with a focus on typography, forms, and layout adjustments.

--- a/src/scss/bootstrap/_button-group.scss
+++ b/src/scss/bootstrap/_button-group.scss
@@ -165,7 +165,7 @@
 
 .btn-group--bordered {
   gap: unset;
-  border: var(--#{$prefix}border-width) solid #DDDFDF;
+  border: var(--#{$prefix}border-width) solid var(--#{$prefix}gray-450);
   border-radius: .5rem;
   padding: .125rem;
 
