--- a/src/scss/bootstrap/_forms.scss
+++ b/src/scss/bootstrap/_forms.scss
@@ -5,5 +5,5 @@
 @import "./bootstrap/form-check";
 @import "../../node_modules/bootstrap/scss/forms/form-range";
 @import "../../node_modules/bootstrap/scss/forms/floating-labels";
-@import "../../node_modules/bootstrap/scss/forms/input-group";
+@import "./bootstrap/input-group";
 @import "../../node_modules/bootstrap/scss/forms/validation";
