--- a/src/scss/bootstrap/_nav.scss
+++ b/src/scss/bootstrap/_nav.scss
@@ -43,6 +43,9 @@
 
 .nav-tabs {
   // scss-docs-start nav-tabs-css-vars
+  --#{$prefix}nav-link-font-size: .875rem;
+  --#{$prefix}nav-link-font-weight: 600;
+
   --#{$prefix}nav-tabs-border-width: #{$nav-tabs-border-width};
   --#{$prefix}nav-tabs-border-color: #{$nav-tabs-border-color};
   --#{$prefix}nav-tabs-border-radius: #{$nav-tabs-border-radius};
@@ -52,11 +55,19 @@
   --#{$prefix}nav-tabs-link-active-border-color: #{$nav-tabs-link-active-border-color};
   // scss-docs-end nav-tabs-css-vars
 
-  border-bottom: var(--#{$prefix}nav-tabs-border-width) solid var(--#{$prefix}nav-tabs-border-color);
+  flex-wrap: nowrap;
+  overflow-y: hidden;
+  overflow-x: auto;
 
   .nav-link {
-    margin-bottom: calc(-1 * var(--#{$prefix}nav-tabs-border-width)); // stylelint-disable-line function-disallowed-list
-    border: var(--#{$prefix}nav-tabs-border-width) solid transparent;
+    --#{$prefix}btn-line-height: 1.8;
+    --#{$prefix}btn-border-radius: 0;
+    --#{$prefix}btn-padding-y: 0;
+    --#{$prefix}btn-padding-x: 0;
+
+    // margin-bottom: calc(-1 * var(--#{$prefix}nav-tabs-border-width)); // stylelint-disable-line function-disallowed-list
+    border-bottom: var(--#{$prefix}nav-tabs-border-width) solid transparent;
+    padding-bottom: .25rem;
     @include border-top-radius(var(--#{$prefix}nav-tabs-border-radius));
 
     &:hover,
@@ -178,5 +189,13 @@
   }
   > .active {
     display: block;
+  }
+}
+
+.tab-pane {
+  margin-top: 1.25rem;
+
+  @include media-breakpoint-up(lg) {
+    margin-top: 2rem;
   }
 }
