--- a/src/scss/bootstrap/_root.scss
+++ b/src/scss/bootstrap/_root.scss
@@ -44,6 +44,7 @@
   --#{$prefix}font-sans-serif: #{inspect($font-family-sans-serif)};
   --#{$prefix}font-monospace: #{inspect($font-family-monospace)};
   --#{$prefix}font-roboto: #{inspect($font-family-roboto)};
+  --#{$prefix}font-manrope: #{inspect($font-family-manrope)};
   --#{$prefix}gradient: #{$gradient};
   --#{$prefix}gradient-hero: #{$gradient-hero};
 
