--- a/src/scss/bootstrap/_variables.scss
+++ b/src/scss/bootstrap/_variables.scss
@@ -8,14 +8,17 @@
 // scss-docs-start gray-color-variables
 $white:    #fff !default;
 $gray-100: #f1f8f6 !default;
+$gray-150: #f5f5f6 !default;
 $gray-200: #e0e0e0 !default;
 $gray-300: #dee2e6 !default;
 $gray-400: #d5d9df !default;
 $gray-450: #dddfdf !default;
-$gray-500: #adb5bd !default;
+$gray-500: #a7a7a7 !default;
+$gray-550: #727272 !default;
 $gray-600: #6c757d !default;
 $gray-700: #455A64 !default;
 $gray-800: #343a40 !default;
+$gray-825: #383838 !default;
 $gray-850: #1a1a1a !default;
 $gray-900: #121212 !default;
 $black:    #000 !default;
@@ -324,10 +327,15 @@ $theme-colors: (
   "teal":       $teal,
   "teal-400":   $teal-400,
   "orange-600": $orange-600,
+  "gray-150":   $gray-150,
   "gray-200":   $gray-200,
   "gray-400":   $gray-400,
   "gray-450":   $gray-450,
+  "gray-500":   $gray-500,
+  "gray-550":   $gray-550,
+  "gray-600":   $gray-600,
   "gray-700":   $gray-700,
+  "gray-825":   $gray-825,
   "gray-850":   $gray-850,
   "instock":  #4caf50,
   "new":      #4dd0e1,
@@ -415,7 +423,22 @@ $prefix:                      $variable-prefix !default;
 // scss-docs-start variable-gradient
 $gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0)) !default;
 $gradient-hero: linear-gradient(to bottom, #e9edf0 0%, #f3f5f7 60%, #c4d3dc 100%) !default;
+$gradient-border: linear-gradient(90deg, rgba(var(--#{$prefix}primary-rgb), 0) 0%, rgba(var(--#{$prefix}primary-rgb), 0.50) 50%, rgba(var(--#{$prefix}primary-rgb), 0) 100%) !default;
 // scss-docs-end variable-gradient
+
+
+
+$sizes: (
+  '96px': 6rem,
+  '120px': 7.5rem,
+  '212px': 13.25rem,
+  '260px': 16.75rem,
+  '360px': 22.5rem,
+  '520px': 32.5rem,
+  '632px': 39.5rem,
+);
+
+
 
 // Spacing
 //
@@ -444,6 +467,7 @@ $spacers: (
   '36px': $spacer * 2.25,
   '40px': $spacer * 2.5,
   '48px': $spacer * 3,
+  '52px': $spacer * 3.25,
   '56px': $spacer * 3.5,
   '60px': $spacer * 3.75,
   '64px': $spacer * 4,
@@ -658,6 +682,7 @@ $aspect-ratios: (
 $font-family-sans-serif:      "GolosText", system-ui, -apple-system !default;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-roboto:          "Roboto", system-ui, -apple-system !default;
+$font-family-manrope:         "Manrope", system-ui, -apple-system !default;
 // stylelint-enable value-keyword-case
 $font-family-base:            var(--#{$prefix}font-sans-serif) !default;
 $font-family-code:            var(--#{$prefix}font-monospace) !default;
@@ -665,6 +690,7 @@ $font-family-code:            var(--#{$prefix}font-monospace) !default;
 $font-families: (
   'golos': var(--#{$prefix}font-golos),
   'roboto': var(--#{$prefix}font-roboto),
+  'manrope': var(--#{$prefix}font-manrope),
 );
 
 // $font-size-root affects the value of `rem`, which is used for as well font sizes, paddings, and margins
@@ -1066,10 +1092,10 @@ $form-switch-checked-bg-position: right center !default;
 
 // scss-docs-start input-group-variables
 $input-group-addon-padding-y:           $input-padding-y !default;
-$input-group-addon-padding-x:           $input-padding-x !default;
-$input-group-addon-font-weight:         $input-font-weight !default;
-$input-group-addon-color:               $input-color !default;
-$input-group-addon-bg:                  var(--#{$prefix}tertiary-bg) !default;
+$input-group-addon-padding-x:           1.25rem !default;
+$input-group-addon-font-weight:         700 !default;
+$input-group-addon-color:               var(--#{$prefix}black) !default;
+$input-group-addon-bg:                  var(--#{$prefix}gray-150) !default;
 $input-group-addon-border-color:        $input-border-color !default;
 // scss-docs-end input-group-variables
 
@@ -1245,11 +1271,11 @@ $nav-link-focus-box-shadow:         $focus-ring-box-shadow !default;
 
 $nav-tabs-border-color:             var(--#{$prefix}border-color) !default;
 $nav-tabs-border-width:             var(--#{$prefix}border-width) !default;
-$nav-tabs-border-radius:            var(--#{$prefix}border-radius) !default;
-$nav-tabs-link-hover-border-color:  var(--#{$prefix}secondary-bg) var(--#{$prefix}secondary-bg) $nav-tabs-border-color !default;
-$nav-tabs-link-active-color:        var(--#{$prefix}emphasis-color) !default;
-$nav-tabs-link-active-bg:           var(--#{$prefix}body-bg) !default;
-$nav-tabs-link-active-border-color: var(--#{$prefix}border-color) var(--#{$prefix}border-color) $nav-tabs-link-active-bg !default;
+$nav-tabs-border-radius:            0 !default;
+$nav-tabs-link-hover-border-color:  currentColor !default;
+$nav-tabs-link-active-color:        var(--#{$prefix}primary) !default;
+$nav-tabs-link-active-bg:           transparent !default;
+$nav-tabs-link-active-border-color: currentColor !default;
 
 $nav-pills-border-radius:           var(--#{$prefix}border-radius) !default;
 $nav-pills-link-active-color:       $component-active-color !default;
