--- a/src/scss/bootstrap/_variables.scss
+++ b/src/scss/bootstrap/_variables.scss
@@ -429,6 +429,7 @@ $gradient-border: linear-gradient(90deg, rgba(var(--#{$prefix}primary-rgb), 0) 0
 
 
 $sizes: (
+  '60px': 3.75rem,
   '96px': 6rem,
   '120px': 7.5rem,
   '212px': 13.25rem,
