--- a/src/scss/bootstrap/_buttons.scss
+++ b/src/scss/bootstrap/_buttons.scss
@@ -194,6 +194,23 @@
   --#{$prefix}btn-active-border-color: var(--#{$prefix}teal-400);
 }
 
+.btn-outline-teal-50 {
+  --#{$prefix}btn-color: var(--#{$prefix}black);
+  --#{$prefix}btn-hover-color: var(--#{$prefix}white);
+  --#{$prefix}btn-active-color: var(--#{$prefix}white);
+  --#{$prefix}btn-disabled-color: var(--#{$prefix}black);
+
+  --#{$prefix}btn-bg: transparent;
+  --#{$prefix}btn-hover-bg: rgba(var(--#{$prefix}teal-rgb), .5);
+  --#{$prefix}btn-active-bg: rgba(var(--#{$prefix}teal-rgb), .5);
+  --#{$prefix}btn-disabled-bg: transparent;
+
+  --#{$prefix}btn-border-color: var(--#{$prefix}gray-450);
+  --#{$prefix}btn-hover-border-color: transparent;
+  --#{$prefix}btn-active-border-color: transparent;
+  --#{$prefix}btn-disabled-color: var(--#{$prefix}gray-450);
+}
+
 .btn-outline-teal-400 {
   --#{$prefix}btn-color: var(--#{$prefix}black);
   --#{$prefix}btn-hover-color: var(--#{$prefix}black);
